--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,7 @@ body {
     text-wrap: balance;
   }
 }
+
+.custom-img{
+  background-image: url("https://images.unsplash.com/photo-1699694927472-46a4fcf68973?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+}
